--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>CSV Report Generator</title>
+  </head>
+  <body>
+    <h1>CSV Report Generator</h1>
+    <form action="" method="post">
+      <textarea name="data" id="data" cols="30" rows="20"></textarea>
+      <div>
+        <button type="submit">Submit data</button>
+      </div>
+    </form>
+  </body>
+</html>
 
