Render template view with csv string on post request

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -10,7 +10,55 @@
     <h1>CSV Report Generator</h1>
     <form action="/generate_csv" method="post">
       <div>
-        <textarea name="report" id="report" cols="70" rows="15"></textarea>
+        <textarea name="report" id="report" cols="70" rows="15">{
+          "firstName": "Joshie",
+          "lastName": "Wyattson",
+          "county": "San Mateo",
+          "city": "San Mateo",
+          "role": "Broker",
+          "sales": 1000000,
+          "children": [
+          {
+            "firstName": "Beth Jr.",
+            "lastName": "Johnson",
+            "county": "San Mateo",
+            "city": "Pacifica",
+            "role": "Manager",
+            "sales": 2900000,
+            "children": [
+              {
+                "firstName": "Smitty",
+                "lastName": "Won",
+                "county": "San Mateo",
+                "city": "Redwood City",
+                "role": "Sales Person",
+                "sales": 4800000,
+                "children": []
+              },
+              {
+                "firstName": "Allen",
+                "lastName": "Price",
+                "county": "San Mateo",
+                "city": "Burlingame",
+                "role": "Sales Person",
+                "sales": 2500000,
+                "children": []
+              }
+            ]
+          },
+          {
+            "firstName": "Beth",
+            "lastName": "Johnson",
+            "county": "San Francisco",
+            "city": "San Francisco",
+            "role": "Broker/Sales Person",
+            "sales": 7500000,
+            "children": []
+          }
+        ]
+      }</textarea>
+      </div>
+      <div>
         <button type="submit">Submit data</button>
       </div>
     </form>
