--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <h1>Multistep Checkout</h1>
-    <div id="home"></div>
+    <div id="root"></div>
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
   </body>
 </html>
